--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -625,37 +625,7 @@ on</string>
           </item>
           <item>
            <layout class="QGridLayout" name="gridLayout_15">
-            <item row="0" column="0" alignment="Qt::AlignHCenter">
-             <widget class="QPushButton" name="btnLoadGCode33">
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="text">
-               <string>Загрузить УП</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QPushButton" name="btnProgram_Run33">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(138, 226, 52);</string>
-              </property>
-              <property name="text">
-               <string>Пуск</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>36</width>
-                <height>36</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
+            <item row="3" column="1">
              <widget class="QPushButton" name="btnProgram_Stop33">
               <property name="styleSheet">
                <string notr="true">background-color: rgb(239, 41, 41);</string>
@@ -675,7 +645,37 @@ on</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0" rowspan="2">
+            <item row="2" column="1">
+             <widget class="QPushButton" name="btnProgram_Run33">
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(138, 226, 52);</string>
+              </property>
+              <property name="text">
+               <string>Пуск</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>36</width>
+                <height>36</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QPushButton" name="btnLoadGCode33">
+              <property name="layoutDirection">
+               <enum>Qt::LeftToRight</enum>
+              </property>
+              <property name="text">
+               <string>Загрузить УП</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" rowspan="3">
              <widget class="GcodeEditor" name="gcode_editor33">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -710,7 +710,7 @@ on</string>
            <enum>QFrame::Plain</enum>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="page">
            <property name="geometry">
@@ -1211,8 +1211,8 @@ font: bold</string>
    <slot>onBtnLoadGCode33()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>222</x>
-     <y>742</y>
+     <x>653</x>
+     <y>766</y>
     </hint>
     <hint type="destinationlabel">
      <x>7</x>
@@ -1252,6 +1252,22 @@ font: bold</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnCommand_Run33</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnMDI()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>604</x>
+     <y>657</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>4</x>
+     <y>661</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
@@ -1262,5 +1278,6 @@ font: bold</string>
   <slot>onBtnTestActive0(bool)</slot>
   <slot>onBtnSaveGCode33()</slot>
   <slot>onBtnClearPlot33()</slot>
+  <slot>onBtnMDI()</slot>
  </slots>
 </ui>
