--- a/PanelForAXIS/ConfigureTaskGlade.ui
+++ b/PanelForAXIS/ConfigureTaskGlade.ui
@@ -68,43 +68,6 @@
     <property name="step_increment">0.5</property>
     <property name="page_increment">1</property>
   </object>
-  <object class="GtkFileChooserDialog" id="filechooserdialog1">
-    <property name="can_focus">False</property>
-    <property name="border_width">5</property>
-    <property name="title" translatable="yes">Задайте имя нового файла</property>
-    <property name="role">GtkFileChooserDialog</property>
-    <property name="modal">True</property>
-    <property name="destroy_with_parent">True</property>
-    <property name="type_hint">dialog</property>
-    <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox1">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="spacing">2</property>
-        <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area1">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="layout_style">end</property>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <placeholder/>
-        </child>
-      </object>
-    </child>
-  </object>
   <object class="GtkListStore" id="liststoreBelt">
     <columns>
       <!-- column-name MillType -->
@@ -133,36 +96,44 @@
   </object>
   <object class="GtkListStore" id="liststoreMill">
     <columns>
-      <!-- column-name MillType -->
+      <!-- column-name displayed_names -->
       <column type="gchararray"/>
-      <!-- column-name gint1 -->
+      <!-- column-name indices -->
       <column type="gint"/>
+      <!-- column-name names -->
+      <column type="gchararray"/>
     </columns>
     <data>
       <row>
         <col id="0" translatable="yes">Диагональная</col>
         <col id="1">0</col>
+        <col id="2" translatable="yes">diagonal</col>
       </row>
       <row>
         <col id="0" translatable="yes">Диагональная  RL</col>
         <col id="1">1</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Конус</col>
-        <col id="1">2</col>
+        <col id="2" translatable="yes">diagonalrl</col>
       </row>
       <row>
         <col id="0" translatable="yes">Перфорация</col>
         <col id="1">3</col>
+        <col id="2" translatable="yes">perforation</col>
       </row>
       <row>
         <col id="0" translatable="yes">Поперечная</col>
         <col id="1">4</col>
+        <col id="2" translatable="yes">transversal</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Конус</col>
+        <col id="1">2</col>
+        <col id="2" translatable="yes">cone</col>
       </row>
     </data>
   </object>
-  <object class="GtkWindow" id="mainWindow">
+  <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Программа</property>
     <child>
       <object class="GtkHBox" id="hbox1">
         <property name="visible">True</property>
@@ -294,7 +265,7 @@
                                     <property name="can_focus">False</property>
                                     <property name="left_padding">12</property>
                                     <child>
-                                      <object class="GtkSpinButton" id="spinbutton1">
+                                      <object class="GtkSpinButton" id="spnLength">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">●</property>
@@ -336,7 +307,7 @@
                                     <property name="can_focus">False</property>
                                     <property name="left_padding">12</property>
                                     <child>
-                                      <object class="GtkSpinButton" id="spinbutton2">
+                                      <object class="GtkSpinButton" id="wpnWidth">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">●</property>
